Reverted fix from #1183 as it was causing more severe problems with menu alignments

--- a/engines/common/nucleus/css-compiled/nucleus.css
+++ b/engines/common/nucleus/css-compiled/nucleus.css
@@ -1440,7 +1440,7 @@ th {
   cursor: initial;
 }
 .g-main-nav .g-toplevel > li .g-menu-item-content {
-  display: table-cell;
+  display: inline-block;
   vertical-align: middle;
   cursor: pointer;
 }
@@ -1450,7 +1450,7 @@ th {
   transition: transform 0.2s ease-out;
 }
 .g-main-nav .g-toplevel > li.g-parent .g-menu-parent-indicator {
-  display: table-cell;
+  display: inline-block;
   vertical-align: middle;
   line-height: normal;
 }
@@ -1612,9 +1612,8 @@ th {
 }
 
 .g-menu-item-container > i {
-  display: table-cell;
   vertical-align: middle;
-  padding-right: 0.2rem;
+  margin-right: 0.2rem;
 }
 
 .g-menu-item-subtitle {
